Memory error when selecting Cycles render engine #40888

Closed
opened 2014-06-30 11:08:29 +02:00 by Eduardo Maldonado · 13 comments

System Information
Operating system and graphics card
Windows XP, 32bit, ATI HD Radeon 4500 series
Windows 7, 32bit, Nvidia GTX 560

Blender Version
Broken:
Blender 2.71 ea3c2eb win32
Blender 2.71 f37ec65 win32

Worked: (optional)
Blender 2.71 37fce22 win32

Short description of error
Memory error like this:
blender_error.png

Exact steps for others to reproduce the error

  1. Open Blender
  2. Select Cycles in Render Engine
  3. Blender crashes.
**System Information** Operating system and graphics card Windows XP, 32bit, ATI HD Radeon 4500 series Windows 7, 32bit, Nvidia GTX 560 **Blender Version** Broken: Blender 2.71 ea3c2eb win32 Blender 2.71 f37ec65 win32 Worked: (optional) Blender 2.71 37fce22 win32 **Short description of error** Memory error like this: ![blender_error.png](https://archive.blender.org/developer/F96087/blender_error.png) **Exact steps for others to reproduce the error** 1) Open Blender 2) Select Cycles in Render Engine 3) Blender crashes.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @EduardoMaldonado

Added subscriber: @EduardoMaldonado

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Does it happen on both XP and Windows 7? Cycles works fine for me on Windows 7 here.

Does it happen on both XP and Windows 7? Cycles works fine for me on Windows 7 here.

I have not tested the last version on Windows 7, but I tested blender-2.71-f37ec65-win32.zip and it occured. (CPU: Intel Core Quad processor)

Sometimes the steps are these:

  1. Open Blender
  2. Select Cycles in Render Engine
  3. With default cube selected, go to Properties Panel >> Material Button and click on "Use nodes"
  4. Blender crashes

Or open an old file like the one attached, and for example, if I change Glossy distribution to Ashikhmin-Shirley it occurs before rendering.
lb_coated_glossy_10.blend

I have not tested the last version on Windows 7, but I tested blender-2.71-f37ec65-win32.zip and it occured. (CPU: Intel Core Quad processor) Sometimes the steps are these: 1) Open Blender 2) Select Cycles in Render Engine 3) With default cube selected, go to Properties Panel >> Material Button and click on "Use nodes" 4) Blender crashes Or open an old file like the one attached, and for example, if I change Glossy distribution to Ashikhmin-Shirley it occurs before rendering. [lb_coated_glossy_10.blend](https://archive.blender.org/developer/F96091/lb_coated_glossy_10.blend)

And Blender-2.71-37fce22-win32 always works fine

And Blender-2.71-37fce22-win32 always works fine
Member

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger
Member

I can confirm this on windows XP with ea3c2eb
edit: and also on windows 7 x64 with 32bit blender

I can confirm this on windows XP with ea3c2eb edit: and also on windows 7 x64 with 32bit blender
Member

cadf77d does not seem to have the problem. I do not have time to investigate this currently though

cadf77d does not seem to have the problem. I do not have time to investigate this currently though

Blender-2.71-17f6d83-win32 also fails when Cycles render engine is selected.
blender_error2.png

Blender-2.71-17f6d83-win32 also fails when Cycles render engine is selected. ![blender_error2.png](https://archive.blender.org/developer/F96166/blender_error2.png)

This issue was referenced by 8c9c93ca6f

This issue was referenced by 8c9c93ca6f4201f51c6db6caa6564f748d1b8bf7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8c9c93ca6f.

Closed by commit 8c9c93ca6f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40888
No description provided.