Fix T40888: Memory error when selecting Cycles render engine